# VICOO

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ai_plugin.yaml  docker-compose.yml  install-rust.ps1  openapi.yaml  package.json  pnpm-lock.yaml  prompt.md  run-desktop.bat  run-tauri-dev.bat  run-tauri-dev.ps1  启动指南.md
.claude/: settings.local.json
.claude/skills/: README.md  api.md  build.md  ci.md  db.md  debug.md  dev.md  docker.md  docs.md  explore.md  git.md  logging.md  mcp-filesystem.md  mcp-github.md  mcp-playwright.md  mcp-sqlite.md  mcp.md  monitoring.md  new-package.md  optimize.md  performance.md  react.md  refactor.md  review.md  run.md  schema.md  security.md  tauri.md  test.md  types.md
.github/workflows/: ci.yml
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts
apps/api/: chat.js  openapi.json  package.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  App.tsx  app.config.ts  app.json  package.json  tsconfig.json
apps/weapp/: package-lock.json  package.json  project.config.json  project.private.config.json  tsconfig.json
apps/web/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts  vite.config.ts  后端接入指南.md
claude-code-skills/: skill-code-optimization.md
desktop-cat/: DraggableMascot.tsx  Mascot.tsx  desktop-cat-mascot.md
docs/api/: api-checklist.md  errors.md  (+1 more)
sdc/: README.md  run.py
(+217 files in other folders)
